# advent-of-code

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
2021/data/: day18.txt
2021/src/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  day_.py  utils.py
2022/src/: README.md  day11.py  day13.py  day15.py  day16.py  day17.py  day19.py  day2.py  day20.py  day22.py  day24.py  day3.py  day5.py  day6.py  day7.py
2023/src/: day1.py  day10.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  day_.py  utils.py
2024/data/: day3.txt
2024/src/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  day_.py  utils.py
data/: day22.txt
day1/: day1.py  prompt.txt
day2/: day2.py
day3/: day3.py
day5/: cranes.txt  cranes_example.txt  day4.py  day5.py
day6/: day6.py
src/: aoc_tools.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day16_3.py  day16_take2.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day25.py  day4.py  day5.py  day8.py  day9.py
