[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Griffin Reichert <griffinreichert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
