[project]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = [{ name = "Griffin Reichert", email = "griffinreichert@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.1.3,<3",
    "tqdm>=4.67.1,<5",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pre-commit>=4.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line length handled by formatter
]
